# rss-demo

./: .envrc  .gitignore  .tmp-arion-docker-compose137658-0.yaml  .trivyignore  AGENTS.md  README.md  arion-compose.nix  arion-pkgs.nix  flake.nix  go.mod  go.sum  go.work  go.work.sum  govendor.toml  shell.nix
.direnv/: flake-profile-1-link
.github/workflows/: build_config.yaml  build_config_container.yaml  build_frontend.yaml  build_frontend_container.yaml  build_locator.yaml  build_locator_container.yaml  build_notify.yaml  build_notify_container.yaml  build_poller.yaml  build_poller_container.yaml  ci.yaml  lint_and_test.yaml  lint_and_test_config.yaml  lint_and_test_locator.yaml  lint_and_test_notify.yaml  release.yaml  (+1 more)
nix/: apps.nix  devhelp.nix  helpers.nix
rss_config/: .envrc  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go
rss_fetcher/: flake.nix  go.mod  go.sum  main.go  main_test.go
rss_frontend/: .envrc  .gitignore  astro.config.mjs  default.nix  flake.nix  instrumentation.cjs  package-lock.json  package.json  shell.nix
rss_locator/: .envrc  CLAUDE.md  Cargo.toml  default.nix  flake.nix  shell.nix
rss_locator/src/: handlers.rs  lib.rs  main.rs  models.rs  telemetry.rs
rss_locator/src/phonebook/: mod.rs  phonebook.rs  phonebook_test.rs
rss_locator/tests/: integration_tests.rs
rss_notify/: .envrc  .gitignore  ;  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  shell.nix
rss_poller/: .envrc  .gitignore  config.json  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  main_test.go  shell.nix
(+42 files in other folders)
